--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "furima_”29658”",
+  "name": "furima_29658",
   "private": true,
   "dependencies": {
     "@rails/ujs": "^6.0.0-alpha",
